--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -103,3 +103,43 @@ html {
     color: var(--light-grey);
 }
 
+
+
+.place-boat-hover:hover {
+    background-color: var(--almost-black);
+}
+
+.start-modal{
+    position: fixed;
+    z-index: 1;
+    top: 40%;
+    left: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 0.3s;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    gap: 15px;
+}
+
+.start-modal.is-visible {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.overlay.active {
+    display: block;
+}
