--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -30,7 +30,13 @@ html {
     text-transform: uppercase;
     display: flex;
     justify-content: center;
+    font-weight: 700;
+    color: var(--almost-blacke);
 } 
+
+.title-container.in-bg {
+    filter: blur(7px);
+}
 
 .game-container {
     border: solid var(--almost-black) 5px;
@@ -39,6 +45,10 @@ html {
     height: 380px;
     padding: 15px;
     
+}
+
+.game-container.in-bg {
+    filter: blur(7px);
 }
 
 .container-div {
@@ -58,8 +68,8 @@ html {
 }
 
 .tile {
-    width: 25px;
-    height: 25px;
+    width: 28px;
+    height: 28px;
     border: var(--blue) 1px solid;
     font-size: 10px;
 }
@@ -99,14 +109,14 @@ html {
     margin-top: 15px;
     margin-bottom: 15px;
     font-size: 30px;
+    font-weight: 700px;
+    color: var(--dark-grey);
 }
 
 .not-turn {
     font-size: 24px;
     color: var(--light-grey);
 }
-
-
 
 .place-boat-hover:hover {
     background-color: var(--almost-black);
@@ -165,5 +175,44 @@ html {
     font-size: 38px;
 }
 
+button {
+    padding: .5em 1em;
+    background: #efefef;
+    border: none;
+    border-radius: .5rem;
+    color: var(--darkest-blue);
+    font-size: .7rem;
+    font-weight: 700;
+    letter-spacing: .1rem;
+    text-align: center;
+    outline: none;
+    cursor: pointer;
+    transition: .2s ease-in-out;
+    box-shadow: -3px -3px 7px rgba(255, 255, 255, .7),
+                -3px -3px 5px rgba(255, 255, 255, .5),
+                3px 3px 4px rgba(255, 255, 255, .075),
+                3px 3px 5px rgba(0, 0, 0, .15);
+}
 
+button:hover {
+  box-shadow: -1px -1px 3px rgba(255, 255, 255, .6),
+              -1px -1px 2px rgba(255, 255, 255, .4),
+              1px 1px 1px rgba(255, 255, 255, .05),
+              1px 1px 2px rgba(0, 0, 0, .1);
+}
 
+.boat-title {
+    font-size: 1.5rem;
+    color: var(--dark-blue);
+    font-weight: 600;
+}
+
+.winner-name {
+    font-size: 4rem;
+    color: var(--dark-blue);
+    font-weight: 600;
+}
+
+.rematch {
+    font-size: 1.5rem;
+}
